app/assets/stylesheets/reddit.scss
.reddit-container {
  margin-bottom: 10px;
}

.reddit-comment {
}

.reddit-user {
  float: right;
  font-size: 14px;
  color: #888;
  font-weight: bold;
}

.reddit-permalink {
  display: block;
}

.time {
  font-size: 14px;
  color: rgb(105, 120, 130);
}

.subreddit {
  color: #888;
  font-weight: bold;
  font-size: 14px;
}

.reddit-comment-body {

}

.reddit-link-container {
}

.reddit-link {
  font-weight: bold;
  font-size: 1.1rem;
  display: block;
}

.reddit-comments-link {
  color: #888;
  font-size: 14px;
  float: right;
}

.comment-count {

}

.nsfw-label {

}

.reddit-meta {

}

.reddit-self-text {

}

